Help/release/dev/subdirectory-installing.rst
@@ -1,0 +1,5 @@
+subdirectory-installing
+-----------------------
+
+* The :command:`install(TARGETS)` command may now be used
+  to install targets created outside the current directory.
